--- a/HW1_Testing Code.ipynb
+++ b/HW1_Testing Code.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is for testing code"
+    "# Student: Casey Cook, ID#: 801085944, Homework 1"
    ]
   },
   {
