--- a/Homework_4.ipynb
+++ b/Homework_4.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "9826d055-5ddf-4b8b-96d1-92d54c492c0e",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "dc5acda1-aa5a-4ec1-b4d8-ca2f4445246a",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "80bbb67e-a7a8-43dd-9cc8-8485a21190d3",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "f0d8fa9d-c913-4764-9686-e81afaa0621c",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "316c1728-51ba-47d4-888e-0224f11959d8",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "ee51510d-168f-4995-8e30-ea2cd858d594",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "15c20e41-9872-407d-b75c-4cf908e9805f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "id": "094cb416-cb45-4180-8ad8-d7e26103fc89",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "id": "b440668b-2e9b-44c8-9885-b4209e962cc4",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "id": "754ea658-f795-497b-b561-82ecf79ff31a",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "0c917606-295d-4ccb-a43e-de60f2db10f4",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "id": "be4174dc-1342-4c69-a80d-1ee752a25049",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "id": "a2abd639-e6ae-4e66-903a-490e20ff27df",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "id": "cd8f6da1-1c67-40e6-bea9-b50683073d62",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6302c29e-bdf4-4f13-8a61-889478583881",
    "metadata": {},
    "outputs": [],
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6de6ddb9-a7d8-4464-808d-ea6a6d7f9c80",
    "metadata": {},
    "outputs": [],
@@ -581,7 +581,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
+   "id": "15d2c4f7-eb52-459f-a5fd-52515057c710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9a4d6097-a24d-46d7-9e9a-177a54f0fdc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_organize(data,length,scaling,problem): # Organize data into matrix for use with SVR algorithm\n",
+    "    \n",
+    "    # Create a list full of zeros with length of # of columns in dataset\n",
+    "    cols = len(data.columns)\n",
+    "    C = [0]*cols\n",
+    "    \n",
+    "    for i in range(len(C)):\n",
+    "        B = data.values[:, i]\n",
+    "        X = B.reshape(length, 1)\n",
+    "        C[i] = X\n",
+    "    \n",
+    "    # if scaling is activated, scales price, specific to dataset in 1a)\n",
+    "    end = int(len(C) - 1)\n",
+    "    if scaling == 1:\n",
+    "        C[0]=C[0]*10**(-3) \n",
+    "        Y = data.values[:, end]*10**(-6)\n",
+    "    else:\n",
+    "        Y = data.values[:, end]\n",
+    "\n",
+    "    initial = np.ones((length, 1)) # Create a 99x1 array of ones\n",
+    "    \n",
+    "    # PROBLEM IS HERE WITH .hstack(), can .hstack() be dynamic?\n",
+    "    if problem == 0:\n",
+    "        X_tot = np.hstack((C[0],C[1],C[2],C[3],C[4]))\n",
+    "    else:\n",
+    "        X_tot = np.hstack((C[0],C[1],C[2],C[3],C[4],C[5],C[6],C[7],C[8],C[9]))\n",
+    "\n",
+    "      \n",
+    "    return X_tot, Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "ee4d8002-6158-4c5b-afb0-9e33df5e31cd",
    "metadata": {},
    "outputs": [
@@ -729,22 +777,22 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This section is for SVR regression model to predict housing prices that were seen in HW1\n",
+    "# This section is for Support Vector Regression (SVR) model to predict housing prices that were seen in HW1\n",
     "\n",
     "# Import housing list \n",
     "housing = pd.read_csv('Housing.csv')\n",
     "print(housing.shape)\n",
     "\n",
-    "# 1a Variables\n",
+    "# Variables 1\n",
     "varlist1 = ['area','bedrooms','bathrooms','stories','parking','price']\n",
     "\n",
-    "# 1b Variables\n",
+    "# Variables 2\n",
     "varlist2 = ['area','bedrooms','bathrooms','stories','mainroad','guestroom','basement','hotwaterheating','airconditioning','parking','prefarea','price']\n",
     "\n",
     "housing.head()"
@@ -752,8 +800,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "88eafafa-2cc7-4431-834e-5362845dd08c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This shows data set metrics\n",
+    "# housing.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9ddbb99b-d5f1-45a9-8bcf-289dc3bc0090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make all yes/no answers into binary\n",
+    "\n",
+    "binary_varlist = ['mainroad', 'guestroom', 'basement','hotwaterheating', 'airconditioning','prefarea']\n",
+    "\n",
+    "#varlist=['mainroad','guestroom','basement','hotwaterheating','airconditioning',\n",
+    "# Defining the map function\n",
+    "         \n",
+    "def binary_map(x):\n",
+    "         return x.map({'yes':1,\"no\":0})\n",
+    "         \n",
+    "# Applying the function to the housing list\n",
+    "housing[binary_varlist]=housing[binary_varlist].apply(binary_map)\n",
+    "\n",
+    "# Check the housing dataframe now\n",
+    "# housing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f63a7760-e2b4-4c16-88c1-e976ba2d995a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = housing.values[:, 0] # Price values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f8ea34fd-7f5b-4aaa-9718-346a3d6ec19f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensions of df_train: (381, 13)\n",
+      "Dimensions of df_train: (164, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Splitting the dataset into two sets specified in train_test_split\n",
+    "np.random.seed(0)\n",
+    "df_train, df_test = train_test_split(housing, test_size = 0.3, train_size = 0.7, random_state = 1 )\n",
+    "\n",
+    "# Get the lengths of the training and test set\n",
+    "mTrain = len(df_train)\n",
+    "mTest = len(df_test)\n",
+    "\n",
+    "print('Dimensions of df_train:',df_train.shape)\n",
+    "print('Dimensions of df_train:',df_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e00b418a-8c0a-404f-99db-1b75cc4eae15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensions of training set used in 1a: (381, 6)\n",
+      "Dimensions of training set used in 1b: (381, 12)\n",
+      "     area  bedrooms  bathrooms  stories  mainroad  guestroom  basement  \\\n",
+      "180  4500         4          2        1         0          0         1   \n",
+      "189  3540         2          1        1         0          1         1   \n",
+      "93   7200         3          2        1         1          0         1   \n",
+      "\n",
+      "     hotwaterheating  airconditioning  parking  prefarea    price  \n",
+      "180                0                1        2         0  5215000  \n",
+      "189                0                0        0         0  5040000  \n",
+      "93                 0                1        3         0  6300000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_NewtrainA = df_train[varlist1]\n",
+    "df_NewtestA = df_test[varlist1]\n",
+    "\n",
+    "df_NewtrainB = df_train[varlist2]\n",
+    "df_NewtestB = df_test[varlist2]\n",
+    "\n",
+    "print('Dimensions of training set used in 1a:', df_NewtrainA.shape)\n",
+    "print('Dimensions of training set used in 1b:', df_NewtrainB.shape)\n",
+    "#print(df_NewtrainA[: 5])\n",
+    "print(df_NewtrainB[: 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0fe58e1b-3d35-4c41-90a0-4fe066a94e79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(381,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = df_train.values[:, 0]\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "92822f38-bc05-41f4-b647-c39fcc9e1891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xTrainA, yTrainA = data_organize(df_NewtrainA,mTrain,1,0)\n",
+    "xTestA, yTestA = data_organize(df_NewtestA,mTest,1,0)\n",
+    "\n",
+    "mTrainB = len(df_NewtrainB)\n",
+    "mTestB = len(df_NewtestB)\n",
+    "\n",
+    "xTrainB, yTrainB = data_organize(df_NewtrainB,mTrainB,1,1)\n",
+    "xTestB, yTestB = data_organize(df_NewtrainB,mTrain,1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8f2729ba-eb83-464f-b221-3f827561de24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Put the training and test data into appropriate variables X and y in this block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "4e17f96f-092d-43d0-b7bd-4e6f320162c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit regression model\n",
+    "svr_rbf = SVR(kernel='rbf', C=1e3, gamma=0.1)\n",
+    "svr_lin = SVR(kernel='linear', C=1e3)\n",
+    "svr_poly = SVR(kernel='poly', C=1e3, degree=2)\n",
+    "y_rbf = svr_rbf.fit(xTrainA,yTrainA).predict(xTrainA)\n",
+    "# y_lin = svr_lin.fit(X, y).predict(X)\n",
+    "# y_poly = svr_poly.fit(X, y).predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5fa5996d-debe-4842-9852-24b86fcac935",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.25667881 3.23981373 6.19946797 3.60463012 6.51537502]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# These are the predictions from the SVR. From here I am not sure what to do\n",
+    "print(y_rbf[: 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a54bab99-7521-4937-8d07-4a6d32530bf5",
    "metadata": {},
    "outputs": [],
    "source": []
